core/iox_query_influxql/src/plan/snapshots/iox_query_influxql__plan__planner__tests__metadata_queries__show_tag_values_many_measurements.snap
---
source: iox_query_influxql/src/plan/planner.rs
expression: "plan(\"SHOW TAG VALUES WITH KEY = many_measurements\")"
---
Sort: iox::measurement ASC NULLS LAST, key ASC NULLS LAST, value ASC NULLS LAST [iox::measurement:Dictionary(Int32, Utf8), key:Dictionary(Int32, Utf8), value:Dictionary(Int32, Utf8);N]
  Union [iox::measurement:Dictionary(Int32, Utf8), key:Dictionary(Int32, Utf8), value:Dictionary(Int32, Utf8);N]
    Projection: Dictionary(Int32, Utf8("m0")) AS iox::measurement, Dictionary(Int32, Utf8("many_measurements")) AS key, m0.many_measurements AS value [iox::measurement:Dictionary(Int32, Utf8), key:Dictionary(Int32, Utf8), value:Dictionary(Int32, Utf8);N]
      Distinct: [many_measurements:Dictionary(Int32, Utf8);N]
        Projection: m0.many_measurements [many_measurements:Dictionary(Int32, Utf8);N]
          Filter: m0.time >= TimestampNanosecond(1672444800000000000, None) [f64_field:Float64;N, many_measurements:Dictionary(Int32, Utf8);N, time:Timestamp(Nanosecond, None)]
            TableScan: m0 [f64_field:Float64;N, many_measurements:Dictionary(Int32, Utf8);N, time:Timestamp(Nanosecond, None)]
    Projection: Dictionary(Int32, Utf8("m1")) AS iox::measurement, Dictionary(Int32, Utf8("many_measurements")) AS key, m1.many_measurements AS value [iox::measurement:Dictionary(Int32, Utf8), key:Dictionary(Int32, Utf8), value:Dictionary(Int32, Utf8);N]
      Distinct: [many_measurements:Dictionary(Int32, Utf8);N]
        Projection: m1.many_measurements [many_measurements:Dictionary(Int32, Utf8);N]
          Filter: m1.time >= TimestampNanosecond(1672444800000000000, None) [f64_field:Float64;N, many_measurements:Dictionary(Int32, Utf8);N, time:Timestamp(Nanosecond, None)]
            TableScan: m1 [f64_field:Float64;N, many_measurements:Dictionary(Int32, Utf8);N, time:Timestamp(Nanosecond, None)]
    Projection: Dictionary(Int32, Utf8("m2")) AS iox::measurement, Dictionary(Int32, Utf8("many_measurements")) AS key, m2.many_measurements AS value [iox::measurement:Dictionary(Int32, Utf8), key:Dictionary(Int32, Utf8), value:Dictionary(Int32, Utf8);N]
      Distinct: [many_measurements:Dictionary(Int32, Utf8);N]
        Projection: m2.many_measurements [many_measurements:Dictionary(Int32, Utf8);N]
          Filter: m2.time >= TimestampNanosecond(1672444800000000000, None) [f64_field:Float64;N, many_measurements:Dictionary(Int32, Utf8);N, time:Timestamp(Nanosecond, None)]
            TableScan: m2 [f64_field:Float64;N, many_measurements:Dictionary(Int32, Utf8);N, time:Timestamp(Nanosecond, None)]
    Projection: Dictionary(Int32, Utf8("m3")) AS iox::measurement, Dictionary(Int32, Utf8("many_measurements")) AS key, m3.many_measurements AS value [iox::measurement:Dictionary(Int32, Utf8), key:Dictionary(Int32, Utf8), value:Dictionary(Int32, Utf8);N]
      Distinct: [many_measurements:Dictionary(Int32, Utf8);N]
        Projection: m3.many_measurements [many_measurements:Dictionary(Int32, Utf8);N]
          Filter: m3.time >= TimestampNanosecond(1672444800000000000, None) [f64_field:Float64;N, many_measurements:Dictionary(Int32, Utf8);N, time:Timestamp(Nanosecond, None)]
            TableScan: m3 [f64_field:Float64;N, many_measurements:Dictionary(Int32, Utf8);N, time:Timestamp(Nanosecond, None)]
    Projection: Dictionary(Int32, Utf8("m4")) AS iox::measurement, Dictionary(Int32, Utf8("many_measurements")) AS key, m4.many_measurements AS value [iox::measurement:Dictionary(Int32, Utf8), key:Dictionary(Int32, Utf8), value:Dictionary(Int32, Utf8);N]
      Distinct: [many_measurements:Dictionary(Int32, Utf8);N]
        Projection: m4.many_measurements [many_measurements:Dictionary(Int32, Utf8);N]
          Filter: m4.time >= TimestampNanosecond(1672444800000000000, None) [f64_field:Float64;N, many_measurements:Dictionary(Int32, Utf8);N, time:Timestamp(Nanosecond, None)]
            TableScan: m4 [f64_field:Float64;N, many_measurements:Dictionary(Int32, Utf8);N, time:Timestamp(Nanosecond, None)]
